--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/loading.css" />
     <title>后台管理系统</title>
   </head>
-  <body>
+  <body class="theme-primary">
     <div id="first" class="ma-mskLoading">
       <div class="ma-line-scale">
         <div></div>
