--- a/index.html
+++ b/index.html
@@ -5,9 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/loading.css" />
+    <link rel="stylesheet" href="/upgrade.css" />
     <title>后台管理系统</title>
   </head>
   <body class="theme-primary">
+    <!--[if lt IE 7]>
+    <div class="upgrade">
+      <h1>请升级您的浏览器</h1>
+      <p>您的浏览器已过时，可能与本网站不兼容。 为了确保最佳体验，请升级到较新的浏览器。</p>
+      <a href="https://browsehappy.com/">立即升级</a>
+    </div>
+    <![endif]-->
+
     <div id="first" class="ma-mskLoading">
       <div class="ma-line-scale">
         <div></div>
